--- a/css/styles.css
+++ b/css/styles.css
@@ -539,7 +539,7 @@ img {
     margin-bottom: 32px;
   }
 
-  .nav-link{
+  .nav-link {
     text-decoration: none;
     text-transform: uppercase;
     font-family: "Barlow";
@@ -757,10 +757,17 @@ img {
   }
 
   .footer-link{
+
+    text-decoration: none;
+    font-family: "Barlow";
+    font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 15px;
     letter-spacing: 0.923077px;
+    color: #83888F;
+    transition: color 0.2s ease;
+    cursor: pointer;
   }
 
 }
